Revisada una prt que necesitava èmfasi.

--- a/deures-tabs.html
+++ b/deures-tabs.html
@@ -31,7 +31,7 @@
 
 		<h3>WYSIWYG</h3>
 
-		<p>WYSIWYG es el acr&oacute;nimo de What You See Is What You Get (Lo que ves es lo que obtienes). Estos editores proporcionan una interfaz de edici&oacute;n que muestra c&oacute;mo se ve el c&oacute;digo en una p&aacute;gina web activa. El uso de editores WYSIWYG no requiere ning&uacute;n conocimiento de HTML; por lo tanto, es mucho m&aacute;s f&aacute;cil comenzar para un usuario sin experiencia alguna en programaci&oacute;n.</p>
+		<p>WYSIWYG es el acr&oacute;nimo de <i>What You See Is What You Get</i> (Lo que ves es lo que obtienes). Estos editores proporcionan una interfaz de edici&oacute;n que muestra c&oacute;mo se ve el c&oacute;digo en una p&aacute;gina web activa. El uso de editores WYSIWYG no requiere ning&uacute;n conocimiento de HTML; por lo tanto, es mucho m&aacute;s f&aacute;cil comenzar para un usuario sin experiencia alguna en programaci&oacute;n.</p>
 
 		<h3>Editor HTML textual</h3>
 
