Changes to be committed: 	new file:   HTML/llistes-taules.html 	modified:   HTML/pagina.html

--- a/HTML/pagina.html
+++ b/HTML/pagina.html
@@ -53,5 +53,23 @@
 		    <area target="_blank" alt="東京スカイシリー" title="東京スカイシリー" href="http://www.tokyo-skytree.jp/" coords="602,358,628,395,639,441,611,496,669,1007,569,1104,569,1361,429,1334,429,1222,502,1193,532,492,497,421,535,356,523,314,548,274,549,120,581,119,593,278,610,319" shape="poly">
 		    <area target="_blank" alt="東京ソラマチ" title="東京ソラマチ" href="https://www.tokyo-solamachi.jp/" coords="846,134,964,163,1012,177,1222,692,1222,1398,797,1380,571,1365,568,1106,711,962,664,396,722,251,767,173,802,133" shape="poly">
 		</map>
+		<hr>
+		<h2>Llistes</h2>
+		<ol>
+			<li>Llimones</li>
+			<li>Pomes
+				<ul>
+					<li>Roges</li>
+					<li>Grogues</li>
+				</ul>
+			</li>
+			<li>Peres</li>
+			<li><i>Kiwis</i>
+				<ul>
+					<li>Grocs</li>
+					<li>Verd</li>
+				</ul>
+			</li>
+		</ol>
 	</body>
 </html>
