Changes to be committed: 	modified:   llistes-taules.html

--- a/HTML/llistes-taules.html
+++ b/HTML/llistes-taules.html
@@ -71,9 +71,26 @@
 									<li>Monstercat</li>
 								</ul>
 							</li>
+							<li>Editor's Pick: <i>Si</i></li>
 						</ul>
 					</li>
 				</ul>
+				<ul>J-Pop
+					<li>そら とぶ さかな
+						<ul>
+							<li>Anys Actives: 6 (2014 - 2020)</li>
+							<li>Desmantellat el 6 de Setembre</li>
+							<li>Discografía:
+								<ul>
+									<li>Albums: 5</li>
+									<li>Singles: 5</li>
+								</ul>
+							</li>
+							<li>Editor's Pick: <i>New Stranger</i></li>
+						</ul>
+					</li>
+				</ul>
+
 			</li>
 		</ol>
 	</body>
