Changes to be committed: 	modified:   HTML/llistes-taules.html

--- a/HTML/llistes-taules.html
+++ b/HTML/llistes-taules.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Llistes i Taules</title>
 	</head>
-	<body style='font-family:Arial; background-color:#000000; color:#EEEEEE'>
+	<body style='font-family:Arial; background-color:#555555; color:#FFFFFF'>
 		<ol>
 			<li>Els top 10 videojocs:
 				<ol>
@@ -49,49 +49,169 @@
 				</ul>
 			</li>
 			<li>Informació d'alguns artistes de Música
-				<ul>Electrònica
-					<li>Tokyo Machine
+				<ul>
+					<li>Electrònica
 						<ul>
-							<li>Anys Actiu: 4 (2016 - Present)</li>
-							<li>Cançons: 22</li>
-							<li>Actualment Signa amb:
+							<li>Tokyo Machine
 								<ul>
-									<li>Monstercat</li>
-									<li>NoCopyrightSounds</li>
+									<li>Anys Actiu: 4 (2016 - Present)</li>
+									<li>Cançons: 22</li>
+									<li>Actualment Signa amb:
+										<ul>
+											<li>Monstercat</li>
+											<li>NoCopyrightSounds</li>
+										</ul>
+									</li>
+									<li>Editor's Pick: <i>BEWM</i> o <i>Bubbles</i></li>
+								</ul>
+							</li>
+							<li>Pegboard Nerds
+								<ul>
+									<li>Anys Actius: 8 (2012 - Present)</li>
+									<li>Cançons: 72</li>
+									<li>Signa amb:
+										<ul>
+											<li>Monstercat</li>
+										</ul>
+									</li>
+									<li>Editor's Pick: <i>Si</i></li>
 								</ul>
 							</li>
 						</ul>
 					</li>
-					<li>Pegboard Nerds
+					<li>J-Pop
 						<ul>
-							<li>Anys Actius: 8 (2012 - Present)</li>
-							<li>Cançons: 72</li>
-							<li>Signa amb:
+							<li>sora tob sakana
 								<ul>
-									<li>Monstercat</li>
+									<li>Anys Actives: 6 (2014 - 2020)</li>
+									<li>Desmantellat el 6 de Setembre</li>
+									<li>Discografía:
+										<ul>
+											<li>Albums: 5</li>
+											<li>Singles: 5</li>
+										</ul>
+									</li>
+									<li>Editor's Pick: <i>New Stranger</i></li>
 								</ul>
 							</li>
-							<li>Editor's Pick: <i>Si</i></li>
+							<li>LiSA
+								<ul>
+									<li>Anys Activa: 15 (2005 - Present)</li>
+									<li>Discografía:
+										<ul>
+											<li>Albums: 4/2/5</li>
+											<li>Singles: 19</li>
+										</ul>
+									</li>
+									<li>Premis:
+										<ul>
+											<li><i>Newtype Anime Awards</i> - 2</li>
+											<li><i>Japan Gold Disc Award</i> - 1</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
 						</ul>
 					</li>
 				</ul>
-				<ul>J-Pop
-					<li>そら とぶ さかな
-						<ul>
-							<li>Anys Actives: 6 (2014 - 2020)</li>
-							<li>Desmantellat el 6 de Setembre</li>
-							<li>Discografía:
-								<ul>
-									<li>Albums: 5</li>
-									<li>Singles: 5</li>
-								</ul>
-							</li>
-							<li>Editor's Pick: <i>New Stranger</i></li>
-						</ul>
-					</li>
-				</ul>
-
 			</li>
 		</ol>
+		<hr>
+		<table style=width:100% border=1>
+			<thead>
+				<tr>
+					<th colspan=6 bgcolor=#0077FF>HORARI</th>
+				</tr>
+				<tr align=center bgcolor=#FF5555>
+					<th bgcolor=#00A62D>Hora</th>
+					<th>Dilluns</th>
+					<th>Dimarts</th>
+					<th>Dimecres</th>
+					<th>Dijous</th>
+					<th>Divendres</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr align=center>
+					<td bgcolor=#00A62D>16:00 - 16:55</td>
+					<td rowspan=2>M08<br>Aplicacions Web</td>
+					<td rowspan=2>M08<br>Aplicaions Web</td>
+					<td rowspan=2>M07<br>Xarxes</td>
+					<td rowspan=2>M06<br>Ciberseguretat</td>
+					<td rowspan=2>M04<br>SO en Xarxa</td>
+				</tr>
+				<tr align=center>
+					<td bgcolor=#00A62D>16:55 - 17:50</td>
+				</tr>
+				<tr align=center>
+					<td bgcolor=#00A62D>17:50 - 18:45</td>
+					<td>Tutoria</td>
+					<td>M04<br>SO en Xarxa</td>
+					<td>M08<br>Aplicacions Web</td>
+					<td>M04<br>SO en Xarxa</td>
+					<td>M08<br>Aplicacions Web</td>
+				</tr>
+				<tr align=center>
+					<td bgcolor=#00A62D>18:45 - 19:15</td>
+					<td colspan=5 bgcolor=#FF0000>PATI</td>
+				</tr>
+				<tr align=center>
+					<td bgcolor=#00A62D>19:15 - 20:10</td>
+					<td rowspan=2>M07<br>Xarxes</td>
+					<td rowspan=2>M11<br>Anglès</td>
+					<td rowspan=2>M06<br>Ciberseguretat</td>
+					<td>M04<br>SO en Xarxa</td>
+					<td>M08<br>Aplicacions Web</td>
+				</tr>
+				<tr align=center>
+					<td bgcolor=#00A62D>20:10 - 21:05</td>
+					<td rowspan=2>M07<br>Xarxes</td>
+					<td rowspan=2></td>
+				</tr>
+				<tr align=center>
+					<td bgcolor=#00A62D>21:05 - 22:00</td>
+					<td></td>
+					<td></td>
+					<td>M11<br>Anglès</td>
+				</tr>
+			</tbody>
+		</table>
+		<hr>
+		<table style=width:100% border=1 bgcolor=#000000>
+                        <thead>
+                                <tr>
+                                        <th colspan=8>Menjar</th>
+                                </tr>
+                                <tr>
+					<th></th>
+                                        <th>Dilluns</th>
+                                        <th>Dimarts</th>
+                                        <th>Dimecres</th>
+                                        <th>Dijous</th>
+                                        <th>Divendres</th>
+					<th>Dissabte</th>
+					<th>Diumenje</th>
+                                </tr>
+                        </thead>
+                        <tbody align=center>
+                                <tr>
+					<td>Desdejuni</td>
+					<td colspan=7>Un parell de galetes</td>
+                                </tr>
+                                <tr>
+					<td>Esmorzar</td>
+					<td></td>
+                                </tr>
+                                <tr>
+                                        <td>Dinar</td>
+                                </tr>
+                                <tr>
+                                        <td>Berenar</td>
+                                </tr>
+                                <tr>
+                                        <td>Sopar</td>
+                                </tr>
+                        </tbody>
+                </table>
 	</body>
 </html>
