--- a/HTML/llistes-taules.html
+++ b/HTML/llistes-taules.html
@@ -21,6 +21,7 @@
 					<li>Crusader King II</li>
 				</ol>
 			</li>
+			<br>
 			<li>Personatges d'Aquests Jocs
 				<ul>
 					<li>Pokemon:
@@ -44,15 +45,16 @@
 						<ul>
 							<li>Twitch</li>
 							<li>Buck</li>
-							<li>Jäger</li>
+							<li>J&auml;ger</li>
 							<li>Mute</li>
 						</ul>
 					</li>
 				</ul>
 			</li>
-			<li>Informació d'alguns artistes de Música
+			<br><br>
+			<li>Informaci&oacute; d'alguns artistes de M&uacute;sica
 				<ul>
-					<li>Electrònica
+					<li>Electr&ograve;nica
 						<ul>
 							<li>Tokyo Machine
 								<ul>
@@ -87,7 +89,7 @@
 								<ul>
 									<li>Anys Actives: 6 (2014 - 2020)</li>
 									<li>Desmantellat el 6 de Setembre</li>
-									<li>Discografía:
+									<li>Discograf&iacute;a:
 										<ul>
 											<li>Albums: 5</li>
 											<li>Singles: 5</li>
@@ -99,13 +101,13 @@
 							<li>LiSA
 								<ul>
 									<li>Anys Activa: 15 (2005 - Present)</li>
-									<li>Discografía:
+									<li>Discograf&iacute;a:
 										<ul>
 											<li>Albums: 4/2/5</li>
 											<li>Singles: 19</li>
 										</ul>
 									</li>
-									<li>Premis:
+									<li>Pr&egrave;mis:
 										<ul>
 											<li><i>Newtype Anime Awards</i> - 2</li>
 											<li><i>Japan Gold Disc Award</i> - 1</li>
@@ -118,6 +120,7 @@
 				</ul>
 			</li>
 		</ol>
+		<br>
 		<hr>
 		<h2 style=text-align:center>Taules</h2>
 		<table style=width:100% border=1>
@@ -179,6 +182,7 @@
 				</tr>
 			</tbody>
 		</table>
+		<br>
 		<hr>
 		<table style=width:100% border=1 bgcolor=#000000>
 			<thead>
