--- a/html/llistes-taules.html
+++ b/html/llistes-taules.html
@@ -27,18 +27,19 @@
 					<li>Pokemon:
 						<ul>
 							<li>Prof. Oak</li>
-							<li>Prof. Campbell</li>
+							<li>Servine</li>
 							<li>Oshawott</li>
+							<li>Tepig</li>
 						</ul>
 					</li>
-
 					<li>TLoZ
 						<ul>
-							<li>Princesa Zelda</li>
-							<li>Ganon</li>
+							<li style=color:#6B4079;background-color:#FFFFFF>Princesa Zelda</li>
+							<li style=color:#EF5D00>Ganon</li>
 							<li>Link</li>
 							<li>Epona</li>
-							<li>Arbre Deku</li>
+							<li>&Aacute;rbol Deku</li>
+							<li style=color:#55FF55>Rey Rhoam</li>
 						</ul>
 					</li>
 					<li>R6S
