--- a/html/llistes-taules.html
+++ b/html/llistes-taules.html
@@ -26,28 +26,28 @@
 				<ul>
 					<li>Pokemon:
 						<ul>
-							<li>Prof. Oak</li>
-							<li>Servine</li>
-							<li>Oshawott</li>
-							<li>Tepig</li>
+							<li style=background-color:#FFFFFF;color:#000000>Prof. Oak</li>
+							<li style=background-color:#16FF00;color:#000000>Servine</li>
+							<li style=background-color:#008AFF>Oshawott</li>
+							<li style=background-color:#FF8D00>Tepig</li>
 						</ul>
 					</li>
 					<li>TLoZ
 						<ul>
-							<li style=color:#6B4079;background-color:#FFFFFF>Princesa Zelda</li>
-							<li style=color:#EF5D00>Ganon</li>
-							<li>Link</li>
-							<li>Epona</li>
-							<li>&Aacute;rbol Deku</li>
-							<li style=color:#55FF55>Rey Rhoam</li>
+							<li style=background-color:#6B4079>Princesa Zelda</li>
+							<li style=background-color:#EF5D00>Ganon</li>
+							<li style=background-color:#059900>Link</li>
+							<li style=background-color:#844800>Epona</li>
+							<li style=background-color:#048200>&Aacute;rbol Deku</li>
+							<li style=background-color:#55FF55;color:#000000>Rey Rhoam</li>
 						</ul>
 					</li>
 					<li>R6S
 						<ul>
-							<li>Twitch</li>
-							<li>Buck</li>
-							<li>J&auml;ger</li>
-							<li>Mute</li>
+							<li style=background-color:#0158FF>Twitch</li>
+							<li style=background-color:#00C5FF>Buck</li>
+							<li style=background-color:#F8FF00;color:#000000>J&auml;ger</li>
+							<li style=background-color:#5A5162>Mute</li>
 						</ul>
 					</li>
 				</ul>
