--- a/html/forms.html
+++ b/html/forms.html
@@ -3,15 +3,39 @@
 	<head>
 		<title>Formularis</title>
 	</head>
-	<body>
+	<body style="font-family:Arial; color:#FFFFFF; background-color:#000000">
 		<h1>Formularis</h1>
-		<form>
-			<label for=nom>Nom:</label>
-			<br>
-			<input type=text id=nom name=nom>
-			<br>
-			
-
+		<form action="home.html" method=get>
+			<!-- <label for=user>Usuari:</label>
+			<br> -->
+			<input type=text id=nom name=nom placeholder="u̵̹̺̓̽͋̿̓̃͑͗ș̶̡̛̼̙̞̌̌̔̈́̅̕͠e̵̓́þ́́˙͖̙̀͠r̶͚̠̲̳͈̳͎̣̝̈́̉̂͆">
+			<br><br>
+			<!--<label for=passwd>Contrasenya:</label>
+			<br>-->
+			<input type=password id=password name=password placeholder="d̷̖͉̜̣̰̿̅̽͝a̷̢͔͖̦̳͝ͅỉ̴̹̰͖̗̖̋̽̋͑̔̋͛ð̶̰͍͙͚̩̞̐̈́̇̍́̽̿̑ͅó̵̰̉̄̓́á̴̬͓̯̻̦̌́̈̒̏͑͐͝͝f̵͕͇̱̖̅͛͋͐͊̽͆͝͝œ̶̫̮̭̝̊͊͊̂͌j̷̰̘̗̃̀̾̆̓̌̈́̆í̵͉̭̲̟͂̋͜͠ớ̸̡̦̲̺̯̫͍̬̻̉͋̀͊̒̐͜f̶̲̙̘̪̣̖̗̈́̀́͆ͅí̶̜̤͖̤͓̭̪̣̔̋́̂̇̀̕ñ̷̡̮̞̺̫̙̗̹̼̠̍͘̕͘á̸͖̤̮͎͙̬͚̮̯̉̐͝ß̸̨̨͉̼̌͠">
+			<br><br>
+			<input  id="リンク スタート" type=submit value=§̸̨̣͕̝̥̯͕̻̭̈́̃͋͒͑̾͐̋̎͝ṷ̴̢̱̘̹̬͓̖̈̾̄ß̷̖̈͗µ̷̧̙̫͚̠̥̻̑͐͆͜į̶͖͚̟̤͔͔͎̂̏̒̒̈͘͠ẗ̸̺̬͕́ length=50>
+			<input	id="レセット" type=reset value=®̷̤͓͕̲̥͚͔̰̇̿͜é̸̝͚̞͚͙ß̶̡̟̣͚͎͉̼͉̘̲̋e̴̮͖͓̗͕̟̜̒̅̈́̚̚þ̸̛̹͖̝̩͇̠́͂̀̀̄͋͂͊͜͠>
+			<br><hr>
+			<!--<input type=radio id="Txad Mascle" name=sexe value="Mascle">
+			<label for="Txad Mascle">Txad Mascle</label><br>
+			<input type=radio id="Txad Femella" name=sexe value="Femella">
+                        <label for="Txad Femella">Txad Femella</label><br>
+			<input type=radio id="Verge No-Binari" name=sexe value="verge">
+                        <label for="Verge No-Binari">Verge No-Binari</label>-->
+			<input type=radio id="Roig" name=color value="AuthLeft" checked>
+                        <label for="Roig">Roig</label>
+                        <input type=radio id="Blau" name=color value="AuthRight">
+                        <label for="Blau">Blau</label><br>
+                        <input type=radio id="Verd" name=color value="LibLeft">
+                        <label for="Verd">Verd</label>
+			<input type=radio id="Groc/Lila" name=color value="LibRight">
+			<label for="Groc/Lila">Groc o Lila</label>
+			<hr>
+			<input type=radio id="txad gos" name=animal value="gos" checked>
+			<label for="txad gos">Txad Gos</label>
+			<input type=radio id="verge gat" name=animal value="gat">
+                        <label for="verge gat">Verge Gat</label>
 		</form>
 	</body>
 </html>
