--- a/html/forms.html
+++ b/html/forms.html
@@ -14,8 +14,6 @@
 			<br>-->
 			<input type=password id=password name=password placeholder="d̷̖͉̜̣̰̿̅̽͝a̷̢͔͖̦̳͝ͅỉ̴̹̰͖̗̖̋̽̋͑̔̋͛ð̶̰͍͙͚̩̞̐̈́̇̍́̽̿̑ͅó̵̰̉̄̓́á̴̬͓̯̻̦̌́̈̒̏͑͐͝͝f̵͕͇̱̖̅͛͋͐͊̽͆͝͝œ̶̫̮̭̝̊͊͊̂͌j̷̰̘̗̃̀̾̆̓̌̈́̆í̵͉̭̲̟͂̋͜͠ớ̸̡̦̲̺̯̫͍̬̻̉͋̀͊̒̐͜f̶̲̙̘̪̣̖̗̈́̀́͆ͅí̶̜̤͖̤͓̭̪̣̔̋́̂̇̀̕ñ̷̡̮̞̺̫̙̗̹̼̠̍͘̕͘á̸͖̤̮͎͙̬͚̮̯̉̐͝ß̸̨̨͉̼̌͠">
 			<br><br>
-			<input  id="リンク スタート" type=submit value=§̸̨̣͕̝̥̯͕̻̭̈́̃͋͒͑̾͐̋̎͝ṷ̴̢̱̘̹̬͓̖̈̾̄ß̷̖̈͗µ̷̧̙̫͚̠̥̻̑͐͆͜į̶͖͚̟̤͔͔͎̂̏̒̒̈͘͠ẗ̸̺̬͕́ length=50>
-			<input	id="レセット" type=reset value=®̷̤͓͕̲̥͚͔̰̇̿͜é̸̝͚̞͚͙ß̶̡̟̣͚͎͉̼͉̘̲̋e̴̮͖͓̗͕̟̜̒̅̈́̚̚þ̸̛̹͖̝̩͇̠́͂̀̀̄͋͂͊͜͠>
 			<br><hr>
 			<input type=radio id="Roig" name=color value="AuthLeft" checked>
                         <label for="Roig">Roig</label>
@@ -30,6 +28,18 @@
 			<label for="txad gos">Txad Gos</label>
 			<input type=radio id="verge gat" name=animal value="gat">
                         <label for="verge gat">Verge Gat</label>
+			<hr>
+			<label for=cotxes>Tria un cotxe</label>
+			<select id=cotxes name=cotxe>
+				<option value=></option>
+				<option value=toyota>トヨタ</option>
+				<option value=ferrari>Ferrari</option>
+				<option value=honda>本田</option>
+				<option value=nissan>日産</option>
+			</select>
+			<br><br>
+			<input  id="リンク スタート" type=submit value=§̸̨̣͕̝̥̯͕̻̭̈́̃͋͒͑̾͐̋̎͝ṷ̴̢̱̘̹̬͓̖̈̾̄ß̷̖̈͗µ̷̧̙̫͚̠̥̻̑͐͆͜į̶͖͚̟̤͔͔͎̂̏̒̒̈͘͠ẗ̸̺̬͕́ length=50>
+			<input	id="レセット" type=reset value=®̷̤͓͕̲̥͚͔̰̇̿͜é̸̝͚̞͚͙ß̶̡̟̣͚͎͉̼͉̘̲̋e̴̮͖͓̗͕̟̜̒̅̈́̚̚þ̸̛̹͖̝̩͇̠́͂̀̀̄͋͂͊͜͠>
 		</form>
 	</body>
 </html>
