Creat el fitxer de deures sobre "formularis"

--- a/html/forms.html
+++ b/html/forms.html
@@ -15,7 +15,7 @@
 			<input type=password id=password name=password placeholder="d̷̖͉̜̣̰̿̅̽͝a̷̢͔͖̦̳͝ͅỉ̴̹̰͖̗̖̋̽̋͑̔̋͛ð̶̰͍͙͚̩̞̐̈́̇̍́̽̿̑ͅó̵̰̉̄̓́á̴̬͓̯̻̦̌́̈̒̏͑͐͝͝f̵͕͇̱̖̅͛͋͐͊̽͆͝͝œ̶̫̮̭̝̊͊͊̂͌j̷̰̘̗̃̀̾̆̓̌̈́̆í̵͉̭̲̟͂̋͜͠ớ̸̡̦̲̺̯̫͍̬̻̉͋̀͊̒̐͜f̶̲̙̘̪̣̖̗̈́̀́͆ͅí̶̜̤͖̤͓̭̪̣̔̋́̂̇̀̕ñ̷̡̮̞̺̫̙̗̹̼̠̍͘̕͘á̸͖̤̮͎͙̬͚̮̯̉̐͝ß̸̨̨͉̼̌͠">
 			<br><br>
 			<br><hr>
-			<input type=radio id="Roig" name=color value="AuthLeft" checked>
+			<input type=radio id="Roig" name=color value="AuthLeft">
                         <label for="Roig">Roig</label>
                         <input type=radio id="Blau" name=color value="AuthRight">
                         <label for="Blau">Blau</label><br>
@@ -24,19 +24,22 @@
 			<input type=radio id="Groc/Lila" name=color value="LibRight">
 			<label for="Groc/Lila">Groc o Lila</label>
 			<hr>
-			<input type=radio id="txad gos" name=animal value="gos" checked>
+			<input type=radio id="txad gos" name=animal value="gos">
 			<label for="txad gos">Txad Gos</label>
 			<input type=radio id="verge gat" name=animal value="gat">
                         <label for="verge gat">Verge Gat</label>
 			<hr>
 			<label for=cotxes>Tria un cotxe</label>
 			<select id=cotxes name=cotxe>
-				<option value=></option>
+				<option value=null>Selecciona una opció</option>
 				<option value=toyota>トヨタ</option>
 				<option value=ferrari>Ferrari</option>
 				<option value=honda>本田</option>
 				<option value=nissan>日産</option>
 			</select>
+			<hr>
+			<label for=fitxer>Introdueix "El Fitxer"</label><br>
+			<input type=file id=el-fitxer name=fitxer>
 			<br><br>
 			<input  id="リンク スタート" type=submit value=§̸̨̣͕̝̥̯͕̻̭̈́̃͋͒͑̾͐̋̎͝ṷ̴̢̱̘̹̬͓̖̈̾̄ß̷̖̈͗µ̷̧̙̫͚̠̥̻̑͐͆͜į̶͖͚̟̤͔͔͎̂̏̒̒̈͘͠ẗ̸̺̬͕́ length=50>
 			<input	id="レセット" type=reset value=®̷̤͓͕̲̥͚͔̰̇̿͜é̸̝͚̞͚͙ß̶̡̟̣͚͎͉̼͉̘̲̋e̴̮͖͓̗͕̟̜̒̅̈́̚̚þ̸̛̹͖̝̩͇̠́͂̀̀̄͋͂͊͜͠>
