Fet 2/3 dels deures. Falta 1/3.

--- a/html/forms-deures.html
+++ b/html/forms-deures.html
@@ -26,6 +26,41 @@
 			<hr>
 			<label for="correu">Adreça d'email:&emsp;&ensp;</label>
 			<input type="email" name="correu" placeholder="direccio@exmple.cat">
+			<hr>
+			<p>Mòduls:<p>
+			<input type=checkbox value=M08 id=m8 name=moduls>
+			<label for=m8>M08&emsp;</label>
+			<input type=checkbox value=M11 id=m11 name=moduls checked>
+			<label for=m11>M11&emsp;</label>
+			<input type=checkbox value=M04 id=m4 name=moduls>
+			<label for=m4>M04&emsp;</label>
+			<input type=checkbox value=M06 id=m6 name=moduls checked>
+			<label for=m6>M06&emsp;</label>
+			<input type=checkbox value=M07 id=m7 name=moduls>
+			<label for=m7>M07</label>
+			<hr>
+			<label for=series>Sèries Preferides</label>
+			<select id=series name=series multiple>
+				<option value=st selected>Stranger Things</option>
+				<option value=pb>Prison Break</option>
+				<option value=bb>Breaking Bad</option>
+				<option value=twd>The Walkind Dead</option>
+				<option value=tbbt selected>The Big Bang Theory</option>
+			</select><br>
+			<input type=radio name=sod id=sub value=vo checked>
+			<label for=sub>VO Subtitulades</label>
+			<input type=radio name=sod id=dub value=dub>
+			<label for=dub>Doblada</label>
+			<hr>
+			<label for=casa>Quantes persones viviu a casa?</label>
+			<select id=casa name=casa>
+				<option value=1>1</opton>
+				<option value=2>2</option>
+				<option value=3>3</option>
+				<option value=3>4</option>
+				<option value=5>5</option>
+				<opton value="5+">Més de 5</option>
+			</select>
 		</form>
 	</body>
 </html>
