--- a/html/forms-deures.html
+++ b/html/forms-deures.html
@@ -5,6 +5,7 @@
 	</head>
 	<body style="font-family:Arial; background-color:#111111; color:#EEEEEE">
 		<h1 align=center>Formularis</h1>
+		<hr><br>
 		<form>
 			<label for=nom>Nom:&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</label>
 			<input type=text name="nom" placeholder=Daniel><br><br>
@@ -38,7 +39,7 @@
 			<label for=m6>M06&emsp;</label>
 			<input type=checkbox value=M07 id=m7 name=moduls>
 			<label for=m7>M07</label>
-			<hr>
+			<hr><br>
 			<label for=series>Sèries Preferides</label>
 			<select id=series name=series multiple>
 				<option value=st selected>Stranger Things</option>
@@ -51,16 +52,31 @@
 			<label for=sub>VO Subtitulades</label>
 			<input type=radio name=sod id=dub value=dub>
 			<label for=dub>Doblada</label>
-			<hr>
+			<br><br><hr><br>
 			<label for=casa>Quantes persones viviu a casa?</label>
 			<select id=casa name=casa>
-				<option value=1>1</opton>
+				<option value=1>1</option>
 				<option value=2>2</option>
 				<option value=3>3</option>
 				<option value=3>4</option>
 				<option value=5>5</option>
-				<opton value="5+">Més de 5</option>
+				<option value=5+>Més de 5</option>
 			</select>
+			<br><br><hr><br>
+			<input type="radio" id="si" name="mascota" value="si">
+			<label for="si">Gos</label>
+			<input type="radio" id="no" name="mascota" value="no">
+			<label for="no">No</label><br>
+			<label for="nomanimal">Nom de la mascòta</label>
+			<input type="text" name="nomanimal" placeholder="Ernest">
+			<br><br><hr><br>
+			<label for="aficions">Escriu les teves aficions a continuació:</label><br>
+			<textarea name="aficions" rows="7" cols="80" maxlength="500"></textarea>
+			<br><br><hr><br>
+			<input type="file" name="images" multiple>
+			<br><br><hr><br>
+			<input type="submit" name="submit" value="Enviar">
+			<input type="reset" name="reser" value="Reseteja">
 		</form>
 	</body>
 </html>
