Modificat el fons de la pràctica de formularis. Ara és més mèmica.

--- a/html/forms-deures.html
+++ b/html/forms-deures.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Formularis</title>
 	</head>
-	<body style="font-family:Arial; background-color:#111111; color:#EEEEEE">
+	<body background="https://i.redd.it/we8d1l9sygt51.png" style="font-family:Arial; background-size:cover; color:#EEEEEE">
 		<h1 align=center>Formularis</h1>
 		<hr><br>
 		<form>
@@ -35,11 +35,11 @@
 			<label for=m11>M11&emsp;</label>
 			<input type=checkbox value=M04 id=m4 name=moduls>
 			<label for=m4>M04&emsp;</label>
-			<input type=checkbox value=M06 id=m6 name=moduls checked>
+			<br><input type=checkbox value=M06 id=m6 name=moduls checked>
 			<label for=m6>M06&emsp;</label>
 			<input type=checkbox value=M07 id=m7 name=moduls>
 			<label for=m7>M07</label>
-			<hr><br>
+			<br><br><br><br>
 			<label for=series>Sèries Preferides</label>
 			<select id=series name=series multiple>
 				<option value=st selected>Stranger Things</option>
@@ -52,7 +52,7 @@
 			<label for=sub>VO Subtitulades</label>
 			<input type=radio name=sod id=dub value=dub>
 			<label for=dub>Doblada</label>
-			<br><br><hr><br>
+			<br><br><br><br>
 			<label for=casa>Quantes persones viviu a casa?</label>
 			<select id=casa name=casa>
 				<option value=1>1</option>
@@ -62,7 +62,7 @@
 				<option value=5>5</option>
 				<option value=5+>Més de 5</option>
 			</select>
-			<br><br><hr><br>
+			<br><br><br><hr><br>
 			<input type="radio" id="si" name="mascota" value="si">
 			<label for="si">Gos</label>
 			<input type="radio" id="no" name="mascota" value="no">
@@ -76,7 +76,7 @@
 			<input type="file" name="images" multiple>
 			<br><br><hr><br>
 			<input type="submit" name="submit" value="Enviar">
-			<input type="reset" name="reser" value="Reseteja">
+			<input type="reset" name="reset" value="Reseteja">
 		</form>
 	</body>
 </html>
