Acabat i formatejat els deures de formularis

--- a/html/forms-deures.html
+++ b/html/forms-deures.html
@@ -20,7 +20,7 @@
 			<select class="type" name="eyecolor" id=eyecolor>
 				<option value="nul"></option>
 				<option value="blau">Blau</option>
-				<option value="marro">Marró</option>
+				<option value="marro">Marr&oacute;</option>
 				<option value="verd">Verd</option>
 				<option value="negre">Negre</option>
 			</select>
@@ -28,19 +28,25 @@
 			<label for="correu">Adreça d'email:&emsp;&ensp;</label>
 			<input type="email" name="correu" placeholder="direccio@exmple.cat">
 			<hr>
-			<p>Mòduls:<p>
+			<p>M&ograve;duls:<p>
+			<input type=checkbox value=M01 id=m1 name=moduls>
+			<label for=m1>M01&emsp;</label>
+			<input type=checkbox value=M2 id=m2 name=moduls checked>
+			<label for=m2>M02&emsp;</label>
+			<input type=checkbox value=M03 id=m3 name=moduls>
+			<label for=m3>M03&emsp;</label>
+			<br><input type=checkbox value=M04 id=m4 name=moduls>
+			<label for=m4>M04&emsp;</label>
+			<input type=checkbox value=M05 id=m5 name=moduls>
+			<label for=m5>M05&emsp;</label>
+			<input type=checkbox value=M06 id=m6 name=moduls>
+			<label for=m6>M06&emsp;</label>
+			<br><input type=checkbox value=M07 id=m7 name=moduls checked>
+			<label for=m7>M07&emsp;</label>
 			<input type=checkbox value=M08 id=m8 name=moduls>
 			<label for=m8>M08&emsp;</label>
-			<input type=checkbox value=M11 id=m11 name=moduls checked>
-			<label for=m11>M11&emsp;</label>
-			<input type=checkbox value=M04 id=m4 name=moduls>
-			<label for=m4>M04&emsp;</label>
-			<br><input type=checkbox value=M06 id=m6 name=moduls checked>
-			<label for=m6>M06&emsp;</label>
-			<input type=checkbox value=M07 id=m7 name=moduls>
-			<label for=m7>M07</label>
 			<br><br><br><br>
-			<label for=series>Sèries Preferides</label>
+			<label for=series>S&egrave;ries Preferides:</label>
 			<select id=series name=series multiple>
 				<option value=st selected>Stranger Things</option>
 				<option value=pb>Prison Break</option>
@@ -67,10 +73,10 @@
 			<label for="si">Gos</label>
 			<input type="radio" id="no" name="mascota" value="no">
 			<label for="no">No</label><br>
-			<label for="nomanimal">Nom de la mascòta</label>
+			<label for="nomanimal">Nom de la masc&ograve;ta</label>
 			<input type="text" name="nomanimal" placeholder="Ernest">
 			<br><br><hr><br>
-			<label for="aficions">Escriu les teves aficions a continuació:</label><br>
+			<label for="aficions">Escriu les teves aficions a continuaci&oacute;:</label><br>
 			<textarea name="aficions" rows="7" cols="80" maxlength="500"></textarea>
 			<br><br><hr><br>
 			<input type="file" name="images" multiple>
