Algo he fet a forms-deures.html, i no se que és

--- a/html/forms-deures.html
+++ b/html/forms-deures.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Formularis</title>
 	</head>
-	<body background="https://i.redd.it/we8d1l9sygt51.png" style="font-family:Arial; background-size:cover; color:#EEEEEE">
+	<body style="font-family:Arial; background-color:#000000; color:#EEEEEE">
 		<h1 align=center>Formularis</h1>
 		<hr><br>
 		<form>
