Hem començat CSS, i he decidit adaptar una mica les pàgines.

--- a/html/home.html
+++ b/html/home.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<title>パウッセのページ</title>
+		<link rel="stylesheet" href="css/master.css">
 	</head>
-	<body style="background-color:#000000; color:#FFFFFF; font-family:Arial">
-		<h1>Home Page</h1>
+	<body>
+		<h1 class="center scaps">Home Page</h1>
+		<hr>
+		
 		<a href=./pagina.html style=color:#999999>Contingut</a>
 		<p>Prova</p>
 	</body>
 </html>
-
-
