Reordenada l'estructura de directoris

--- a/html/exercicis/home.html
+++ b/html/exercicis/home.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>パウッセのページ</title>
-		<link rel="stylesheet" href="css/master.css">
+		<link rel="stylesheet" href="../css/master.css">
 	</head>
 	<body>
 		<h1 class="center scaps">Home Page</h1>
 		<hr>
-		
+
 		<a href=./pagina.html style=color:#999999>Contingut</a>
 		<p>Prova</p>
 	</body>
