--- a/html/exercicis/pagina.html
+++ b/html/exercicis/pagina.html
@@ -3,7 +3,7 @@
 	<head>
 		<!--   Pau no peeji-->
 		<title>パウのページ</title>
-		<link rel="stylesheet" href="css/master.css">
+		<link rel="stylesheet" href="../css/master.css">
 	</head>
 	<body>
 		<h1 class="title" style="color: red">
