--- a/html/exercicis/borders.html
+++ b/html/exercicis/borders.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Borders</title>
-		<link rel=stylesheet href="css/borders.css">
+		<link rel=stylesheet href="../css/borders.css">
 	</head>
 	<body>
 		<div class="a">
