--- a/html/exercicis/s-tier.html
+++ b/html/exercicis/s-tier.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel=stylesheet href="css/s-tier.css">
+		<link rel=stylesheet href="../css/s-tier.css">
 	</head>
 	<body>
 		<h1>S-Tier Webpage</h1>
