Exercici de borders i wallpapers css.

--- a/css/exercicis-css/pagina1css.html
+++ b/css/exercicis-css/pagina1css.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+&Egrave;<!DOCTYPE html>
 <html>
 	<head>
 		<title>Background i Borders</title>
@@ -7,13 +7,16 @@
 	<body>
 		<div id="d1">
 			<h2 id="hh1">Trens</h2>
-			<p id="p11">Els trens són vehicles de transport.</p>
-			<p id="p12">És mouen per uns carrils fixats anomenats 'vies'.</p>
+			<p id="p11">Els trens s&oacute;n vehicles de transport.</p>
+			<p id="p12">&Egrave;s mouen per uns carrils fixats anomenats 'vies'.</p>
 		</div>
-		<div id="d2">     
+		<div id="d2">
 			<h2 id="hh2">Avions</h2>
-			<p id="p21">Els aviosn són vehicles de transport</p>
-			<p id="p22">És mouen pel medi aeri a grans velocitats i poden cobrir grans distàncies.</p>
+			<p id="p21">Els avions s&oacute;n vehicles de transport</p>
+			<p id="p22">&Egrave;s mouen pel medi aeri a grans velocitats i poden cobrir grans dist&aacute;ncies.</p>
 		</div>
+		<br><br>
+		<p id="p1">Borde rod&oacute;</p>
+		<p id="p2">Borde multicolor</p>
 	</body>
 </html>
