Petits canvis a millor.

--- a/css/exercicis-css/pagina1css.html
+++ b/css/exercicis-css/pagina1css.html
@@ -1,17 +1,17 @@
-&Egrave;<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Background i Borders</title>
 		<link rel=stylesheet href="bg-br.css">
 	</head>
 	<body>
-		<div id="d1">
-			<h2 id="hh1">Trens</h2>
+		<div>
+			<h2>Trens</h2>
 			<p id="p11">Els trens s&oacute;n vehicles de transport.</p>
 			<p id="p12">&Egrave;s mouen per uns carrils fixats anomenats 'vies'.</p>
 		</div>
-		<div id="d2">
-			<h2 id="hh2">Avions</h2>
+		<div>
+			<h2>Avions</h2>
 			<p id="p21">Els avions s&oacute;n vehicles de transport</p>
 			<p id="p22">&Egrave;s mouen pel medi aeri a grans velocitats i poden cobrir grans dist&aacute;ncies.</p>
 		</div>
