Arreglat el css d'acord als exercicis

--- a/css/exercicis-css/pagina1css.html
+++ b/css/exercicis-css/pagina1css.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 		<div>
-			<h2>Trens</h2>
+			<h2 id="h21">Trens</h2>
 			<p id="p11">Els trens s&oacute;n vehicles de transport.</p>
 			<p id="p12">&Egrave;s mouen per uns carrils fixats anomenats 'vies'.</p>
 		</div>
 		<div>
-			<h2>Avions</h2>
+			<h2 id="h22">Avions</h2>
 			<p id="p21">Els avions s&oacute;n vehicles de transport</p>
 			<p id="p22">&Egrave;s mouen pel medi aeri a grans velocitats i poden cobrir grans dist&aacute;ncies.</p>
 		</div>
