Acabada la part 1 de l'exercici 6.

--- a/css/exercicis-css-5/padding.html
+++ b/css/exercicis-css-5/padding.html
@@ -14,10 +14,10 @@
 		<div id="divdos">
 			<h2 id="h2dos">Vivamus Porta</h2>
 			<p id="paratres">Vivamus porta felis a erat maximus viverra. Fusce pulvinar feugiat nulla ac maximus. Praesent quis lorem a nunc lobortis cursus. Fusce pretium vitae tellus at malesuada. Donec cursus leo lorem, non efficitur lorem iaculis nec. Sed mollis tortor velit, ac volutpat justo volutpat non. Suspendisse bibendum turpis ipsum, eget fringilla massa dapibus ut. Aenean eleifend urna orci, vel rhoncus magna ornare id.</p>
-			<p id="paratres">Nunc lacus risus, consequat vel sem vel, congue faucibus turpis. Nulla tortor neque, malesuada porttitor iaculis ut, blandit id purus. Praesent aliquet tempor interdum. Duis sodales laoreet laoreet. Duis blandit nulla diam, sit amet egestas sapien semper vitae. Fusce lobortis et nunc vitae vehicula.</p>
+			<p id="paraquatre">Nunc lacus risus, consequat vel sem vel, congue faucibus turpis. Nulla tortor neque, malesuada porttitor iaculis ut, blandit id purus. Praesent aliquet tempor interdum. Duis sodales laoreet laoreet. Duis blandit nulla diam, sit amet egestas sapien semper vitae. Fusce lobortis et nunc vitae vehicula.</p>
 		</div>
 		<div id="divtres">
-			<p id="paraquatre">Dimensionamiento en HTML</p>
+			<i>Dimensionamiento en HTML</i>
 		</div>
 	</body>
 </html>
