--- a/css/exercicis-css-6/exercici.html
+++ b/css/exercicis-css-6/exercici.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Exercici X</title>
+		<title>Exercici 6</title>
 		<link rel="stylesheet" href="exercici.css">
 	</head>
 	<body>
+		<h2 id="titol">Cites de peŀlicules famoses</h2>
 		<div class="dots-w">
-			<p class="dots-r">"Que la fuerza te acompañe" Han Solo La Guerra de las Galaxias (1977)</p>
+			<p class="dots-r"><i>"Que la fuerza te acompañe" Han Solo La Guerra de las Galaxias (1977)</i></p>
+		</div>
+		<div class="ou">
+			"Le voy a hacer una oferta que no podrá rechazar" Vito Corleone. El Padrino (1972)
+		</div>
+		<div class="et">
+			<b>Teléfono... Mi casa... "E.T.(1982)"</b>
 		</div>
 	</body>
 </html>
