--- a/css/exercicis-css-6/exercici.html
+++ b/css/exercicis-css-6/exercici.html
@@ -7,7 +7,7 @@
 	<body>
 		<h2 id="titol">Cites de peŀlicules famoses</h2>
 		<div class="dots-w">
-			<p class="dots-r"><i>"Que la fuerza te acompañe" Han Solo La Guerra de las Galaxias (1977)</i></p>
+			<i>"Que la fuerza te acompañe" Han Solo La Guerra de las Galaxias (1977)</i>
 		</div>
 		<div class="ou">
 			"Le voy a hacer una oferta que no podrá rechazar" Vito Corleone. El Padrino (1972)
