--- a/css/exercicis-css-6/exercici.html
+++ b/css/exercicis-css-6/exercici.html
@@ -15,5 +15,20 @@
 		<div class="et">
 			<b>Teléfono... Mi casa... "E.T.(1982)"</b>
 		</div>
+		<div class="blau">
+			"Francamente, querida, me importa un bledo" Rhett Butler. Lo que el viento se llevó (1939)
+		</div>
+		<div class="rosa">
+			"Creo que este el principio de una hermosa amistad" Casablanca (1942)
+		</div>
+		<div class="verd">
+			"Elemental querido Watson" Sherlock Holmes Las aventuras de Sherlock Holmes (1939)
+		</div>
+		<div class="roig">
+			"Houston tenemos un problema" Apollo 13 (1995)
+		</div>
+		<div class="revers">
+			"Hasta la vista, baby" Terminator 2 (1991)
+		</div>
 	</body>
 </html>
