--- a/css/sticky/sticky.html
+++ b/css/sticky/sticky.html
@@ -6,11 +6,10 @@
 	</head>
 	<body>
 		<h1>Sticky</h1>
-		<p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaieslngfrnjgrlbgkbjglgkjzklbvlbg;\sbnjsbgbglz<br>bfleibfliub\luieblbf\awjbfhlf\kbhfaegbrezbvzkjshb\vvfdtfwtyqdftyqf7itgqgtgr1i63rtiaurrfp90aghlsfknv<br>layvfgk\auyfvgkuyfkjbhfluiawbhf\\hjwbfloighr;oighroig[eshite[ohizluigykugrhkvaf<br>aabwoligbolwigbaowinvznkjb nzponb pozo</p>
-		<div id="id1">
-			<div id="id2">
+		<div class="relative">
+			<div class="sticky">
+				<p><p>
 			</div>
-		</diV>
+		</div>
 	</body>
 </html>
-
