Una mica mes de java, no gaire tho

--- a/Aplicacions-Web/JavaScript/strings.html
+++ b/Aplicacions-Web/JavaScript/strings.html
@@ -6,7 +6,10 @@
 		var splstr = str.split(" ");
 		document.write('La posició de "JavaScript" és: ', pos, '<br>');
 		pos = splstr.indexOf("JavaScript");
-		document.write(splstr[pos]);
+		document.write(splstr[pos], '<br>');
+		document.write(splstr)
+		splstr[1] = "CCCP"
+		document.write('<br>',splstr)
 	</script>
 	<body>
 	</body>
