Acabats els exercicis de JS, de moment.

--- a/Aplicacions-Web/JavaScript/Exercicis/exercici2.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici2.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Exercici 2</title>
+	</head>
 	<body>
 	<h1>Exercici 2</h1>
 	<p id='e2'></p>
 	</body>
 	<script>
     // Exercici 2
-    var nums = prompt("Introdueix 4 nombres, separats per espais:");
+    var nums = prompt("Introdueix 4 nombres, separats per comes i espais:", "1, 1, 1, 100");
     nums = nums.split(" ", 4);
     var n1 = parseFloat(nums[0]);
     var n2 = parseFloat(nums[1]);
