Afegir un botó als exercicis per passar al següent.

--- a/Aplicacions-Web/JavaScript/Exercicis/exercici11.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici11.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e11"></p>
+    <button type="button" onclick="window.open('exercici12.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercci 11
