--- a/Aplicacions-Web/JavaScript/Exercicis/exercici2.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici2.html
@@ -7,6 +7,8 @@
 	<body>
 	<h1>Exercici 2</h1>
 	<p id='e2'></p>
+	<button type="button" onclick="window.open('exercici3.html','_self')">Següent Exercici</button>
+
 	</body>
 	<script>
     // Exercici 2
