--- a/Aplicacions-Web/JavaScript/Exercicis/exercici3.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici3.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e3"></p>
+    <button type="button" onclick="window.open('exercici4.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 3
