--- a/Aplicacions-Web/JavaScript/Exercicis/exercici4.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici4.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e4"></p>
+    <button type="button" onclick="window.open('exercici5.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 4
