--- a/Aplicacions-Web/JavaScript/Exercicis/exercici5.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici5.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e5"></p>
+    <button type="button" onclick="window.open('exercici6.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 5
