--- a/Aplicacions-Web/JavaScript/Exercicis/exercici6.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici6.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e6"></p>
+    <button type="button" onclick="window.open('exercici7.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 6
