--- a/Aplicacions-Web/JavaScript/Exercicis/exercici7.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici7.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e7"></p>
+    <button type="button" onclick="window.open('exercici8.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 7
