--- a/Aplicacions-Web/JavaScript/Exercicis/exercici8.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici8.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e8"></p>
+    <button type="button" onclick="window.open('exercici9.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 8
