--- a/Aplicacions-Web/JavaScript/Exercicis/exercici9.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici9.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e9"></p>
+    <button type="button" onclick="window.open('exercici10.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 9
