--- a/Aplicacions-Web/JavaScript/Exercicis/exercici1.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici1.html
@@ -7,6 +7,7 @@
   <body>
     <h3>Exercici 1</h3>
     <p id="e1"></p>
+    <button type="button" onclick="window.open('exercici2.html','_self')">Següent Exercici</button>
   </body>
   <script type="text/javascript">
     // Exercici 1
