--- a/Aplicacions-Web/JavaScript/Exercicis/exercici10.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici10.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p id="e10"></p>
+    <button type="button" onclick="window.open('exercici11.html','_self')">Següent Exercici</button>
   </body>
   <script>
     // Exercici 10
