Afegit un CSS fosc pels exercicis.

--- a/Aplicacions-Web/JavaScript/Exercicis/exercici1.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici1.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>UF1-PR3</title>
+    <link rel=stylesheet href="main.css">
   </head>
   <body>
-    <h3>Exercici 1</h3>
-    <p id="e1"></p>
-    <button type="button" onclick="window.open('exercici2.html','_self')">Següent Exercici</button>
+    <div>
+    	<h3>Exercici 1</h3>
+    	<p id="e1"></p>
+    	<button type="button" onclick="window.open('exercici2.html','_self')">Següent Exercici</button>
+    </div>
   </body>
   <script type="text/javascript">
     // Exercici 1
