--- a/Aplicacions-Web/JavaScript/Exercicis/exercici12.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici12.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Exercici 12</title>
+    <link rel=stylesheet href="main.css">
   </head>
   <body>
   	<h3>Exercici 12</h3>
