--- a/Aplicacions-Web/JavaScript/Exercicis/exercici11.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici11.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Exercici 11</title>
+    <link rel=stylesheet href="main.css">
   </head>
   <body>
     <p id="e11"></p>
