--- a/Aplicacions-Web/JavaScript/Exercicis/exercici2.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici2.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Exercici 2</title>
+		<link rel=stylesheet href="main.css">
 	</head>
 	<body>
-	<h1>Exercici 2</h1>
-	<p id='e2'></p>
-	<button type="button" onclick="window.open('exercici3.html','_self')">Següent Exercici</button>
-
+		<h1>Exercici 2</h1>
+		<p id='e2'></p>
+		<button type="button" onclick="window.open('exercici3.html','_self')">Següent Exercici</button>
 	</body>
 	<script>
     // Exercici 2
