--- a/Aplicacions-Web/JavaScript/Exercicis/exercici3.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici3.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Exercici 3</title>
+    <link rel=stylesheet href="main.css">
   </head>
   <body>
     <p id="e3"></p>
