--- a/Aplicacions-Web/JavaScript/Exercicis/exercici5.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici5.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Exercici 5</title>
+    <link rel=stylesheet href="main.css">
   </head>
   <body>
     <p id="e5"></p>
