--- a/Aplicacions-Web/JavaScript/Exercicis/exercici7.html
+++ b/Aplicacions-Web/JavaScript/Exercicis/exercici7.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Exercici 7</title>
+    <link rel=stylesheet href="main.css">
   </head>
   <body>
     <p id="e7"></p>
